2007-09-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_button):
	minor fixes in shadings

2007-09-23  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	* engines/clearlooks/src/clearlooks_types.h:
	Minor fixes to toolbar's shadings.

2007-09-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.12.1 release.

2007-09-21  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	Fix the crux theme by removing the stray new line in the
	color scheme setting.

2007-09-17  Benjamin Berg  <benjamin@sipsolutions.net>

	* NEWS:
	* configure.ac:
	Update for 2.12.0 release.

2007-09-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Industrial/gtk-2.0/gtkrc:
	Make industrial use the configurable tooltip colors

	* themes/Clearlooks/gtk-2.0/gtkrc:
	* themes/Crux/gtk-2.0/gtkrc:
	* themes/ThinIce/gtk-2.0/gtkrc:
	Fix the matching and comments, it is called gtk-tooltip not
	gtk-tooltips (now?)

2007-09-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Crux/gtk-2.0/gtkrc:
	Apply patch from Luca Ferretti to add tooltip color support to Crux.

2007-09-10  Benjamin Berg  <benjamin@sipsolutions.net>

	* themes/Clearlooks/gtk-2.0/gtkrc:
	Fix tooltip_*_color in Clearlooks. It said tooltips_*_color ...

2007-09-10  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_scrollbar_slider):
	Forgot to use adaptive HUE shading just on colored scrollbar.
	Fixed. No more bugs now? :)

2007-09-09  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_box_gap):
	* engines/clearlooks/src/support.c:
	(clearlooks_get_notebook_tab_position):
	* engines/clearlooks/src/support.h:
	Added a smarter heuristic to mark notebook box edges as not rounded.
